--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,3 +1,42 @@
 #wall .tag-1 {
   display: none;
 }
+#wall #tag-2 {
+  display: none;
+}
+
+#wall .slickwicked #tag-3 {
+  display: none;
+}
+
+.parent #tag-4 {
+  display: none;
+}
+
+.parent .slick #tag-5 {
+  display: none;
+}
+
+<div id="wall">
+  <div class="tag-1"></div>
+  <div id="tag-2"></div>
+  <div id="tag-3" class="slick wicked"></div>
+  <div class="parent">
+    <div id="tag-4"></div>
+  </div>
+  <div class="parent">
+    <div id="tag-5" class="slick"></div>
+  </div>
+  <div class="parent">
+    <div></div>
+    <div>
+      <div id="tag-6"></div>
+    </div>
+  </div>
+  <div class="parent">
+    <div>
+      <div id="tag-7" class="slick"></div>
+    </div>
+    <div></div>
+  </div>
+</div>
