--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -17,26 +17,10 @@
   display: none;
 }
 
-<div id="wall">
-  <div class="tag-1"></div>
-  <div id="tag-2"></div>
-  <div id="tag-3" class="slick wicked"></div>
-  <div class="parent">
-    <div id="tag-4"></div>
-  </div>
-  <div class="parent">
-    <div id="tag-5" class="slick"></div>
-  </div>
-  <div class="parent">
-    <div></div>
-    <div>
-      <div id="tag-6"></div>
-    </div>
-  </div>
-  <div class="parent">
-    <div>
-      <div id="tag-7" class="slick"></div>
-    </div>
-    <div></div>
-  </div>
-</div>
+.parent #tag-6 {
+  display: none;
+}
+
+.parent .slick #tag-7 {
+  display: none;
+}
