Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -5,9 +5,9 @@
   display: none;
 }
 
-/*#wall .slickwicked #tag-3 {
+#wall .slickwicked #tag-3 {
   display: none;
-}*/
+}
 
 .parent #tag-4 {
   display: none;
