Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -5,7 +5,7 @@
   display: none;
 }
 
-#wall #tag-3 div[class="slick wicked"] {
+#wall #tag-2~#tag-3 div[class="slick wicked"] {
   display: none;
 }
 
