--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,7 +19,7 @@ div#wall .parent #tag-5.slick{
 
 div#wall div.parent div:last-child div#tag-6{
   display: none;
-}
+}/**/
 
 .parent .slick #tag-7 {
   display: none;
