--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -21,6 +21,6 @@ div#wall div.parent div:last-child div#tag-6{
   display: none;
 }/**/
 
-.parent .slick #tag-7 {
+body div#wall div.parent div > #tag-7.slick {
   display: none;
 }
