--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -5,7 +5,7 @@
   display: none;
 }
 
-div#wall #tag-3[class="slick wicked"]{
+div#wall #tag-2~#tag-3[class="slick wicked"]{
   display: none;
 }/**/
 
