--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,7 +15,7 @@ div#wall #tag-2~#tag-3[class="slick wicked"]{
 
 div#wall div.parent #tag-5.slick{
   display: none;
-}/**/
+}
 
 div#wall div.parent div:last-child div#tag-6{
   display: none;
