--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -21,6 +21,6 @@ div#wall div.parent div:last-child div > div#tag-6{
   display: none;
 }/**/
 
-body div#wall div.parent div > #tag-7.slick {
+body div#wall div.parent div:first-child div > #tag-7.slick {
   display: none;
 } /**/
